fix contrast color

--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,9 @@
 /* creation variable theme + normalisation des balises */
 
 * {
-  --title-color: #26c6da;
+  --title-color: #A2E7F1;
   --background-color: #37474f;
-  --container-color: #6d6d6d;
+  --container-color: #5E5E5E;
   --text-color: #e0e0e0;
   --hover-color: #ffffff;
   --main-text-font: "Poppins", sans-serif;
